# litmus-inf

./: .gitignore  API.md  Cargo.toml  README.md  critique_triage.json  depth_improvement_plan.json  review_aniruddha_sinha.md  review_gary_marcus.md  review_ilya_sutskever.md  review_joseph_s_chang.md  review_sara_roy.md  validate_herd7.sh  validate_herd7_full.sh
data/: critiques.json  experiment_log.txt  experiment_results.json  grounding.json
docs/: paper.tex  tool_paper.tex
examples/: dekker.toml  double_checked_locking.json  gpu_litmus.rs  producer_consumer.toml  security_demo.rs
litmus_inf/: API.md  README.md  adversarial_benchmark.py  alethe_proof_checker.py  alethe_proof_extractor.py  api.py  ast_analyzer.py  ast_calibration_analysis.py  benchmark_suite.py  bug_coverage_analysis.py  ci_integration.py  code_analyzer.py  compiler_fence_checker.py  completeness_analysis.py  compositional_reasoning.py  comprehensive_calibration.py  concurrency_analyzer.py  concurrency_patterns.py  concurrency_testing.py  concurrent_data_structures.py  concurrent_design_patterns.py  cross_solver_validation.py  cuda_checker.py  dartagnan_comparison.py  deadlock_detector.py  differential_testing.py  dsl_cat_correspondence.py  dsl_denotational_semantics.py  dsl_expressiveness_analysis.py  expanded_benchmark_v2.py  expanded_benchmark_v3.py  expanded_llm_eval.py  expanded_llm_evaluation.py  expanded_llm_ood_eval.py  false_negative_analysis.py  false_positive_empirical.py  fence_cost.py  fence_optimizer.py  formal_verification.py  gpu_external_validation.py  (+55 more)
src/: lib.rs
(+5110 files in other folders)
