[package]
name = "litmus_infinity"
version = "0.1.0"
edition = "2021"
description = "LITMUS∞: Complete Axiomatic Memory Model Verification via Algebraic Compression"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
itertools = "0.13"
hashbrown = "0.15"
bitvec = { version = "1", features = ["serde"] }
indexmap = "2"
smallvec = "1"
petgraph = "0.7"
num-traits = "0.2"
regex = "1"
ndarray = "0.16"

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[[bin]]
name = "litmus-cli"
path = "src/bin/main.rs"

[[bin]]
name = "exec-graph-bench"
path = "src/bin/exec_graph_bench.rs"

[[bench]]
name = "compression_bench"
harness = false
